SubPlan Add 기능 추가

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width:100%;
     height: 50px;
     background-color: black;
     text-align: center;
     color: white;
+}
+
+.hidden-option {
+    display: none; /* Option will be hidden */
 }
